tests/NormalTests/paczka1/fuzzy1/82573459.err
Error in line 4: o738ZD S205 16,3
Error in line 7: W9HiW9Ju3 S205 45,6
Error in line 17: o738ZD S320 1,5
Error in line 18: o738ZD S205 80,9
Error in line 15: Wj50T S164 82,4
Error in line 22: o738ZD A804 32,9
Error in line 25: o738ZD S320 80,4
Error in line 30: o738ZD S164 19,8
Error in line 31: S164 S205 37,2
